2008-02-14  Neil Horman		   <nhorman@tuxdriver.com>

	* src/dir.c: Fix up issrcfile to identify hpp/hxx files
	as standard c++ source files

	* src/main.c: Add myexit as a handler for SIGTERM, to 
	clean up temp files on TERM

2007-12-03  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* doc/cscope.1: Grammar corrections [SF patch #1843711] and 
	troff syntax fixes [from ESR].

2007-03-10  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/scanner.l (comment_input): Translate EOF to LEXEOF in this
	case, too.
	(input, noncommentinput): Spell out LEXEOF instead of a magic
	number 0.

2007-02-09  Neil Horman		   <nhorman@tuxdriver.com>
	* doc/xcscope.1: Added man page for xcscope utility in contrib

2007-01-07  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/fscanner.l: Avoid a -Wunused warning by disabling the
	yy_topstate() function.

	* README: Add a warning about the intended user audience not
	including superusers or anonymous ones.

	* contrib/webcscope/cscope: Find perl in /usr/bin, which should be
	more likely as its installation position these days.  Put a big
	red reminder to the top of the generated HTML page warning about
	the security issues involved with webcscope.  Thanks to V-Li and
	the Gentoo folks for the patch.
	
2006-10-23  Neil Horman		   <nhorman@tuxdriver.com>

	* src/main.c: Update sigwinch_handler to only register if linemode
	is not specified (SF bug 1574354)

2006-10-15  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/dir.c (accessible_file): New function to test for file
	readability more strictly than just access().
	(inviewpath): Use it to avoid unreadable files (directories, in
	particular) getting into the srcfilelist, and thus hopefully fix
	SF bug #1173768.
	
2006-10-10  Neil Horman            <nhorman@tuxdriver.com>

	* src/main.c: Updated sigwinch_handler to not run in the event
	that curses is not running to avoid crash (SF bug 1574354)
